@@ -1,6 +1,8 @@
 2005-08-23  Ulrich Drepper  <drepper@redhat.com>
 
-	* sysdeps/unix/sysv/linux/timer_routines.c: Don't block SIGSETXID ever.
+	* sysdeps/unix/sysv/linux/timer_routines.c (timer_helper_thread):
+	Use __sigfillset.  Document that sigfillset does the right thing wrt
+	to SIGSETXID.
 
 2005-07-11  Jakub Jelinek  <jakub@redhat.com>
 
@@ -223,6 +225,7 @@
 
 2005-02-14  Alan Modra  <amodra@bigpond.net.au>
 
+	[BZ #721]
 	* sysdeps/powerpc/tcb-offsets.sym (thread_offsetof): Redefine to suit
 	gcc4.
 
